try to fix cards on mobile

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     color: black;
     font-weight: 500;
     text-align: center;
-    width: 100vw;
+    width: 100%;
     height: 10em;
     text-align: center;
     padding-top: 3em;
@@ -24,7 +24,7 @@
     margin-top: 4em;
   }
   nav {
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     background: #ADD8E6;
@@ -347,7 +347,7 @@
     color: black;
     font-weight: 500;
     text-align: center;
-    width: 100vw;
+    width: 100%;
     height: 6em;
     text-align: center;
     padding-top: 3em;
@@ -355,7 +355,7 @@
     margin-top: 5em;
   }
   nav {
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     background: #ADD8E6;
@@ -456,7 +456,7 @@
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
     flex: 1;
-    width: 80vw;
+    max-width: 500px;
     height: 500px;
     border-radius: 1.25rem;
     background-color: #ffc857;
@@ -519,7 +519,7 @@
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
     flex: 1;
-    width: 72vw;
+    max-width: 500px;
     height: 1000px;
     color: white;
     border-radius: 1.25rem;
